<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.katerina.anaptyksi_1617_kmns.Activities.OnlineSettingsFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1">


        <TextView
            android:text="@string/insert_broker_s_ip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:layout_weight="0.0"
            android:paddingStart="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:textStyle="normal|bold"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.05"
            android:padding="0dp"
            tools:layout_margin="6dp">

            <EditText
                android:layout_width="303dp"
                android:layout_height="wrap_content"
                android:inputType="number|numberDecimal"
                android:digits="0123456789."
                android:ems="19"
                android:id="@+id/ip_first"
                tools:layout_margin="6dp"/>

            <Button
                android:text="@string/ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"
                android:layout_weight="1" />


        </LinearLayout>

        <TextView
            android:text="@string/insert_broker_s_port"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView6"
            android:layout_weight="0.05"
            android:paddingStart="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:textStyle="normal|bold"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.05"
        android:padding="0dp"
        tools:layout_margin="6dp">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="4"
            android:id="@+id/editText5"
            tools:layout_margin="6dp" />

        <Button
            android:text="@string/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button3" />
    </LinearLayout>

        <TextView
            android:text="@string/press_to_inform_about_availability"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_weight="0.05"
            android:paddingStart="@dimen/fab_margin"
            android:paddingTop="@dimen/fab_margin"
            android:textStyle="normal|bold"
            android:paddingBottom="@dimen/fab_margin"
            android:paddingEnd="@dimen/fab_margin" />

        <Button
            android:text="@string/available"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button"
            android:layout_weight="0.05" />

    </LinearLayout>

</FrameLayout>
